Project simple_bank {
  database_type: 'PostgreSQL'
  Note: '''
    # SimpleBank Database
  '''
}
Table users as U {
  username varchar [pk]
  hashed_password varchar [not null]
  full_name varchar [not null]
  email varchar [unique, not null]
  is_email_verified boolean [not null, default: false]
  password_changed_at timestamptz [not null, default: '0001-01-01 00:00:00Z']
  created_at timestamptz [not null, default: `now()`]
}
Table verify_emails {
  id bigserial [pk] //auto-increment private key
  username varchar [ref: > U.username, not null]
  email varchar [not null]
  secret_code varchar [not null]
  is_used bool [not null, default: false]
  created_at timestamptz [not null, default: `now()`]
  expires_at timestamptz [not null, default: `now() + interval '15 minutes'`]
}
Table accounts as A {
  id bigserial [pk] //auto-increment private key
  owner varchar [ref: > U.username, not null]
  balance bigint [not null]
  currency varchar [not null]
  created_at timestamptz [not null, default: `now()`] //include timezone
  Indexes {
    owner
    (owner, currency) [unique]
  }
}

Table entries {
  id bigserial [pk] //auto-increment private key
  account_id bigint [ref: > A.id, not null] //inline relationship(one-to-many)
  amount bigint [not null, note: 'can be positive or negative']
  created_at timestamptz [not null, default: `now()`] //include timezone
  Indexes {
    account_id
  }
}

Table transfers {
  id bigserial [pk] //auto-increment private key
  from_account_id bigint [ref: > A.id, not null] //inline relationship(one-to-many)
  to_account_id bigint [ref: > A.id, not null] //inline relationship(one-to-many)
  amount bigint [not null, note: 'must be positive']
  created_at timestamptz [not null, default: `now()`] //include timezone
Indexes {
    from_account_id
    to_account_id
    (from_account_id, to_account_id)
  }
}

Table sessions {
  id uuid [pk]
  username varchar [not null, ref: > U.username]
  refresh_token varchar [not null]
  user_agent varchar [not null]
  client_ip varchar [not null]
  is_blocked boolean [not null, default: false]
  expires_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    (username) [unique]
  }
}

